package com.pjsoft.uml;

import java.util.*;

/**
 * Command Line Interface Application
 * 
 * Handles user interactions via CLI.
 */
public class CLIApplication {
    private String[] args;
    private ConfigurationManager config;
    private UMLDiagramGenerator umlGenerator;

    public CLIApplication(ConfigurationManager config) {
        this.config = config;
        this.umlGenerator = new UMLDiagramGenerator(config);
    }

    public void parseArguments(String[] args) {
        this.args = args;
        // Argument parsing logic
    }

    public void executeCommand() {
        // Command execution logic
    }

    public void displayHelp() {
        // Display CLI usage info
    }
}