package com.pjsoft.uml;

import java.util.*;

/**
 * Class Diagram Service
 * 
 * Handles class diagram generation.
 */
public class ClassDiagramService {
    private ConfigurationManager config;

    public ClassDiagramService(ConfigurationManager config) {
        this.config = config;
    }

    public String generateDiagram(List<CodeEntity> data) {
        // Generate class diagram logic
        return "Class Diagram Generated";
    }

    private void formatDiagram(String format) {
        // Logic to format diagram before storing
    }
}