package com.pjsoft.uml;

/**
 * File Handler
 * 
 * Handles reading/writing Java files.
 */
public class FileHandler {
    public String readFile(String filePath) {
        // Read file logic
        return "File Content";
    }

    public void writeFile(String filePath, String content) {
        // Write file logic
    }

    private boolean validateFile(String filePath) {
        // Validate if the file exists and is accessible
        return true;
    }
}