package com.pjsoft.uml;

import java.util.*;

/**
 * Graphical UI
 * 
 * Provides an interactive user interface for UML generation.
 */
public class GraphicalUI {
    private String windowTitle;
    private List<String> menuOptions;
    private ConfigurationManager config;

    public GraphicalUI(ConfigurationManager config) {
        this.config = config;
    }

    public void initializeComponents() {
        // Initialize UI components
    }

    public void renderDiagram(String diagram) {
        // Render UML diagram in UI
    }

    public void handleUserInput(String action) {
        // Process user interactions
    }

    public void refreshUI() {
        // Refresh UI components
    }

    public void exportDiagram(String format, String filePath) {
        // Export displayed diagram
    }
}