package com.pjsoft.uml;

import java.util.*;

/**
 * Java Source Code Parser
 * 
 * Parses Java source code and extracts metadata.
 */
public class JavaParserService {
    private List<String> sourceFiles;
    private ConfigurationManager config;

    public JavaParserService(ConfigurationManager config) {
        this.config = config;
    }

    public List<CodeEntity> parseFiles(List<String> files) {
        this.sourceFiles = files;
        List<CodeEntity> parsedEntities = new ArrayList<>();
        // Parsing logic here
        return parsedEntities;
    }

    public boolean validateSyntax(String code) {
        // Logic to validate Java syntax before parsing
        return true;
    }
}