package com.pjsoft.uml;

import java.util.*;

/**
 * Sequence Diagram Service
 * 
 * Handles sequence diagram generation.
 */
public class SequenceDiagramService {
    private ConfigurationManager config;

    public SequenceDiagramService(ConfigurationManager config) {
        this.config = config;
    }

    public String generateDiagram(List<CodeEntity> data) {
        // Generate sequence diagram logic
        return "Sequence Diagram Generated";
    }

    private void extractMethodCalls() {
        // Extract method interactions for sequence diagrams
    }
}