package com.pjsoft.uml;

import java.util.*;

/**
 * Storage Service
 * 
 * Manages storing UML diagrams.
 */
public class StorageService {
    private ConfigurationManager config;

    public StorageService(ConfigurationManager config) {
        this.config = config;
    }

    public void storeDiagram(String format, String outputPath) {
        // Store logic
    }
}